endless logic works

--- a/CardGame/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/CardGame/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -124,7 +124,7 @@ ServerDebugDrawingColorTint=(R=0.000000,G=0.000000,B=0.000000,A=1.000000)
 AdditionalServerLaunchParameters=
 ServerFixedFPS=0
 NetworkEmulationSettings=(bIsNetworkEmulationEnabled=False,EmulationTarget=Server,CurrentProfile="Custom",OutPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0),InPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0))
-LastSize=(X=0,Y=0)
+LastSize=(X=1914,Y=986)
 LastExecutedLaunchDevice=Windows@LOGANS
 LastExecutedLaunchName=LOGANS
 LastExecutedPIEPreviewDevice=
@@ -176,7 +176,7 @@ bRealtimeMaterialViewport=False
 
 [DetailCustomWidgetExpansion]
 CardPlayer_C=CardPlayer_C.Physics.ConstraintsGroup,CardPlayer_C.Collision.Collision,PropertyWrapper.DefaultValueCategory.Player Number,K2Node_VariableGet.DefaultValueCategory.Player Number
-SkeletalMeshComponent=CardPlayer_C.Physics.ConstraintsGroup,CardPlayer_C.Collision.Collision
+SkeletalMeshComponent=CardPlayer_C.Physics.ConstraintsGroup,CardPlayer_C.Collision.Collision,PropertyWrapper.DefaultValueCategory.Player Number,K2Node_VariableGet.DefaultValueCategory.Player Number
 PropertyWrapper=CardPlayer_C.Physics.ConstraintsGroup,CardPlayer_C.Collision.Collision,PropertyWrapper.DefaultValueCategory.Player Number,K2Node_VariableGet.DefaultValueCategory.Player Number
 Blueprint=CardPlayer_C.Physics.ConstraintsGroup,CardPlayer_C.Collision.Collision
 InputMappingContext=InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappings.ActionMappings./Game/Interact.Interact
@@ -186,11 +186,11 @@ MaterialInstanceConstant=
 K2Node_EnhancedInputAction=CardPlayer_C.Physics.ConstraintsGroup,CardPlayer_C.Collision.Collision
 WorldSettings=WorldSettings.WorldPartitionSetup.RuntimeHash,WorldSettings.GameMode.SelectedGameModeDetails
 WorldPartitionRuntimeSpatialHash=
-Gameplay_Screen_1_Player_C=CardPlayer_C.Physics.ConstraintsGroup,CardPlayer_C.Collision.Collision,PropertyWrapper.DefaultValueCategory.Player Number,K2Node_VariableGet.DefaultValueCategory.Player Number
+Gameplay_Screen_1_Player_C=CardPlayer_C.Physics.ConstraintsGroup,CardPlayer_C.Collision.Collision,PropertyWrapper.DefaultValueCategory.Player Number,PropertyWrapper.DefaultValueCategory.2x2,K2Node_VariableGet.DefaultValueCategory.Player Number
 K2Node_VariableGet=CardPlayer_C.Physics.ConstraintsGroup,CardPlayer_C.Collision.Collision,PropertyWrapper.DefaultValueCategory.Player Number,PropertyWrapper.DefaultValueCategory.2x2,K2Node_VariableGet.DefaultValueCategory.Player Number
 Settings_Menu_C=CardPlayer_C.Physics.ConstraintsGroup,CardPlayer_C.Collision.Collision,PropertyWrapper.DefaultValueCategory.Player Number,K2Node_VariableGet.DefaultValueCategory.Player Number
 Main_Menu_C=CardPlayer_C.Physics.ConstraintsGroup,CardPlayer_C.Collision.Collision,PropertyWrapper.DefaultValueCategory.Player Number,K2Node_VariableGet.DefaultValueCategory.Player Number
-K2Node_VariableSet=CardPlayer_C.Physics.ConstraintsGroup,CardPlayer_C.Collision.Collision,PropertyWrapper.DefaultValueCategory.Player Number,K2Node_VariableGet.DefaultValueCategory.Player Number
+K2Node_VariableSet=CardPlayer_C.Physics.ConstraintsGroup,CardPlayer_C.Collision.Collision,PropertyWrapper.DefaultValueCategory.Player Number,PropertyWrapper.DefaultValueCategory.2x2,K2Node_VariableGet.DefaultValueCategory.Player Number
 K2Node=CardPlayer_C.Physics.ConstraintsGroup,CardPlayer_C.Collision.Collision,PropertyWrapper.DefaultValueCategory.Player Number,K2Node_VariableGet.DefaultValueCategory.Player Number
 Set audio Badges=CardPlayer_C.Physics.ConstraintsGroup,CardPlayer_C.Collision.Collision,PropertyWrapper.DefaultValueCategory.Player Number,K2Node_VariableGet.DefaultValueCategory.Player Number
 WBP_ImageCard_C=CardPlayer_C.Physics.ConstraintsGroup,CardPlayer_C.Collision.Collision,PropertyWrapper.DefaultValueCategory.Player Number,K2Node_VariableGet.DefaultValueCategory.Player Number
@@ -214,26 +214,34 @@ K2Node_CustomEvent=CardPlayer_C.Physics.ConstraintsGroup,CardPlayer_C.Collision.
 CardManager_C=CardPlayer_C.Physics.ConstraintsGroup,CardPlayer_C.Collision.Collision,PropertyWrapper.DefaultValueCategory.Player Number,PropertyWrapper.DefaultValueCategory.2x2,K2Node_VariableGet.DefaultValueCategory.Player Number
 K2Node_SwitchInteger=CardPlayer_C.Physics.ConstraintsGroup,CardPlayer_C.Collision.Collision,PropertyWrapper.DefaultValueCategory.Player Number,K2Node_VariableGet.DefaultValueCategory.Player Number
 Turtle_C=
+Clock_WB_C=
+WBP_EasyTimedTest_C=CardPlayer_C.Physics.ConstraintsGroup,CardPlayer_C.Collision.Collision,PropertyWrapper.DefaultValueCategory.Player Number,PropertyWrapper.DefaultValueCategory.2x2,K2Node_VariableGet.DefaultValueCategory.Player Number
 
 [EditorStartup]
-LastLevel=/Game/Untitled
+LastLevel=/Engine/Maps/Templates/OpenWorld
 
 [AssetEditorSubsystem]
 CleanShutdown=True
 DebuggerAttached=False
 RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=EnumEditor
-RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=GenericAssetEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
-RecentAssetEditors=MaterialInstanceEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=EnumEditor
 RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=MaterialInstanceEditor
+RecentAssetEditors=EnumEditor
 RecentAssetEditors=
 RecentAssetEditors=MaterialInstanceEditor
 RecentAssetEditors=MaterialInstanceEditor
@@ -241,59 +249,40 @@ RecentAssetEditors=MaterialEditor
 RecentAssetEditors=EnumEditor
 RecentAssetEditors=MaterialEditor
 RecentAssetEditors=MaterialEditor
-RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=
-RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
-RecentAssetEditors=WidgetBlueprintEditor
-RecentAssetEditors=WidgetBlueprintEditor
-RecentAssetEditors=WidgetBlueprintEditor
-RecentAssetEditors=WidgetBlueprintEditor
-RecentAssetEditors=WidgetBlueprintEditor
-RecentAssetEditors=WidgetBlueprintEditor
-OpenAssetsAtExit=/Game/Cards/Card.Card
-OpenAssetsAtExit=/Game/CardPlayer.CardPlayer
-OpenAssetsAtExit=/Game/CardType.CardType
-OpenAssetsAtExit=/Game/MemoryGame/Blueprints/GameTemplate/WBP_Easy.WBP_Easy
-OpenAssetsAtExit=/Game/ClickableComponent.ClickableComponent
-OpenAssetsAtExit=/Game/CardManager.CardManager
-OpenAssetsAtExit=/Game/ArraySizes.ArraySizes
-OpenAssetsAtExit=/Game/Cards/Turtle.Turtle
-OpenAssetsAtExit=/Game/Cards/Llama.Llama
-OpenAssetsAtExit=/Game/Cards/Bee.Bee
-OpenAssetsAtExit=/Game/Cards/Bat.Bat
+OpenAssetsAtExit=/Game/UI/Gameplay_Screen_1_Player.Gameplay_Screen_1_Player
+OpenAssetsAtExit=/Game/UI/Main_Menu.Main_Menu
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/MemoryGame/Blueprints/GameTemplate/WBP_MemoryGame
-MRUItem1=/Game/Cards/Bat
-MRUItem2=/Game/Cards/Bee
-MRUItem3=/Game/Cards/Llama
-MRUItem4=/Game/Cards/Turtle
-MRUItem5=/Game/Cards/Card
-MRUItem6=/Game/ArraySizes
-MRUItem7=/Game/CardManager
-MRUItem8=/Game/ClickableComponent
-MRUItem9=/Game/MemoryGame/Blueprints/GameTemplate/WBP_Easy
-MRUItem10=/Game/Meshes/Turtle
-MRUItem11=/Game/CardType
-MRUItem12=/Game/CardPlayer
-MRUItem13=/Game/Untitled
-MRUItem14=/Game/Meshes/Bat
-MRUItem15=/Game/Meshes/Bee
-MRUItem16=/Game/Meshes/Picture
-MRUItem17=/Game/UI/Game_Mode_Data/Card_Pack
-MRUItem18=/Game/Meshes/BAse
-MRUItem19=/Engine/BasicShapes/BasicShapeMaterial
-MRUItem20=/Game/CardGM
-MRUItem21=/Game/MemoryGame/Maps/M_MemoryGame
-MRUItem22=/Game/PlayerControllerCard
-MRUItem23=/Game/UI/WBP_Clock
-MRUItem24=/Game/UI/Gameplay_Screen_1_Player
-MRUItem25=/Game/UI/Clock_WB
-MRUItem26=/Game/MemoryGame/Blueprints/EndGame/WBP_EndGame
-MRUItem27=/Game/UI/Main_Menu
-MRUItem28=/Game/MemoryGame/Blueprints/Setup/WBP_ImageCard
-MRUItem29=/Game/MemoryGame/Blueprints/Setup/WBP_OptionButton
+MRUItem0=/Game/UI/Gameplay_Screen_1_Player
+MRUItem1=/Game/UI/Main_Menu
+MRUItem2=/Game/MemoryGame/Blueprints/GameTemplate/WBP_EasyTimedTest
+MRUItem3=/Game/MemoryGame/Blueprints/GameTemplate/WBP_EasyTemplate
+MRUItem4=/Game/CardGM
+MRUItem5=/Game/CardManager
+MRUItem6=/Game/CardPlayer
+MRUItem7=/Game/Interact
+MRUItem8=/Game/PlayerControllerCard
+MRUItem9=/Game/MemoryGame/Blueprints/GameTemplate/WBP_MemoryGame
+MRUItem10=/Game/Cards/Bat
+MRUItem11=/Game/Cards/Bee
+MRUItem12=/Game/Cards/Llama
+MRUItem13=/Game/Cards/Turtle
+MRUItem14=/Game/Cards/Card
+MRUItem15=/Game/ArraySizes
+MRUItem16=/Game/ClickableComponent
+MRUItem17=/Game/Meshes/Turtle
+MRUItem18=/Game/CardType
+MRUItem19=/Game/Untitled
+MRUItem20=/Game/Meshes/Bat
+MRUItem21=/Game/Meshes/Bee
+MRUItem22=/Game/Meshes/Picture
+MRUItem23=/Game/UI/Game_Mode_Data/Card_Pack
+MRUItem24=/Game/Meshes/BAse
+MRUItem25=/Engine/BasicShapes/BasicShapeMaterial
+MRUItem26=/Game/MemoryGame/Maps/M_MemoryGame
+MRUItem27=/Game/MemoryGame/Blueprints/EndGame/WBP_EndGame
 
 [DetailCategories]
 CardPlayer_C.TransformCommon=True
@@ -1019,6 +1008,29 @@ WBP_MemoryGame_C.Localization=True
 WBP_MemoryGame_C.Accessibility=True
 WBP_MemoryGame_C.Rendering=True
 WBP_MemoryGame_C.Navigation=True
+CardPlayer_C.Card=True
+CardManager_C.Default=True
+WBP_EasyTimedTest_C.Images to Guess=True
+WBP_EasyTimedTest_C.Option Buttons=True
+WBP_EasyTimedTest_C.Game Setup=True
+WBP_EasyTimedTest_C.Image Cards=True
+WBP_EasyTimedTest_C.Clue Setup=True
+WBP_EasyTimedTest_C.Point Setup=True
+WBP_EasyTimedTest_C.Tries Setup=True
+WBP_EasyTimedTest_C.Input=True
+WBP_EasyTimedTest_C.Default=True
+WBP_EasyTimedTest_C.Appearance=True
+WBP_EasyTimedTest_C.Interaction=True
+WBP_EasyTimedTest_C.Designer=True
+WBP_EasyTimedTest_C.Performance=True
+WBP_EasyTimedTest_C.Layout=True
+WBP_EasyTimedTest_C.Behavior=True
+WBP_EasyTimedTest_C.Render Transform=True
+WBP_EasyTimedTest_C.Localization=True
+WBP_EasyTimedTest_C.Accessibility=True
+WBP_EasyTimedTest_C.Rendering=True
+WBP_EasyTimedTest_C.Navigation=True
+Gameplay_Screen_1_Player_C.Default=True
 
 [ContentBrowser]
 ContentBrowserTab1.SourcesExpanded=True
@@ -1053,7 +1065,7 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.SelectedPaths=/Game/Cards
+ContentBrowserDrawer.SelectedPaths=/Game/UI
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 ContentBrowserDrawer.SelectedCollections=
@@ -1114,14 +1126,14 @@ TextBlock="\"Object\" \"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.
 TextLayoutWidget="\"Object\" \"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Appearance.Font.OutlineSettings.OutlineColor\" \"Object.Appearance.StrikeBrush\" \"Object.Appearance.StrikeBrush.TintColor\" \"Object.Appearance.StrikeBrush.OutlineSettings.Color\" \"Object.Appearance.ShadowColorAndOpacity\" \"Object.Appearance.Margin\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 HorizontalBox="\"Object\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 Button="\"Object\" \"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
-ContentWidget="\"Object\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+ContentWidget="\"Object\" \"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 Gameplay_Screen_1_Player_C="\"Object\" "
 UserWidget="\"Object\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 VerticalBox="\"Object\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 Settings_Menu_C="\"Object\" "
 CapsuleComponent="\"Object\" "
 ShapeComponent="\"Object\" "
-Main_Menu_C="\"Object\" "
+Main_Menu_C="\"Object\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 EdGraphNode_Comment="\"Object\" "
 EdGraphNode="\"Object\" "
 Settings_Menu_Title_C="\"Object\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
@@ -1132,7 +1144,7 @@ AudioTextBox_C="\"Object\" \"Object.Layout.Slot\" \"Object.Render Transform.Rend
 WBP_EndGame_C="\"Object\" "
 WBP_OptionButton_C="\"Object\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 WrapBox="\"Object\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
-Clock_WB_C="\"Object\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+Clock_WB_C="\"Object\" "
 WBP_Clock_C="\"Object\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 BoxComponent="\"Object\" "
 ClickableComponent_C="\"Object\" "
@@ -1156,6 +1168,7 @@ K2Node_Switch="\"Object\" "
 K2Node="\"Object\" "
 CardManager_C=
 WBP_MemoryGame_C="\"Object\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+WBP_EasyTimedTest_C="\"Object\" "
 
 [PlacementMode]
 RecentlyPlaced=/Game/Card.Card;
@@ -1214,6 +1227,7 @@ PerWorldEditorSettings=(("/Game/Untitled.Untitled", (LoadedEditorRegions=((Min=(
 /Game/Cards/Llama.Llama=0
 /Game/Cards/Bee.Bee=0
 /Game/Cards/Bat.Bat=0
+/Game/MemoryGame/Blueprints/GameTemplate/WBP_EasyTimedTest.WBP_EasyTimedTest=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -1435,7 +1449,7 @@ bDrawGrid=False
 PrimType=1
 
 [RootWindow]
-ScreenPosition=X=-1694.000 Y=178.000
+ScreenPosition=X=317.000 Y=153.000
 WindowSize=X=1280.000 Y=720.000
 InitiallyMaximized=True
 
