--- a/CardGame/Config/DefaultEngine.ini
+++ b/CardGame/Config/DefaultEngine.ini
@@ -9,7 +9,7 @@ TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
 FourPlayerSplitscreenLayout=Grid
 bOffsetPlayerGamepadIds=False
-GameInstanceClass=/Script/Engine.GameInstance
+GameInstanceClass=/Game/DataBetweenLevels.DataBetweenLevels_C
 GameDefaultMap=/Engine/Maps/Templates/OpenWorld.OpenWorld
 ServerDefaultMap=/Engine/Maps/Entry.Entry
 GlobalDefaultGameMode=/Game/CardGM.CardGM_C
