--- a/CardGame/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/CardGame/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -124,7 +124,7 @@ ServerDebugDrawingColorTint=(R=0.000000,G=0.000000,B=0.000000,A=1.000000)
 AdditionalServerLaunchParameters=
 ServerFixedFPS=0
 NetworkEmulationSettings=(bIsNetworkEmulationEnabled=False,EmulationTarget=Server,CurrentProfile="Custom",OutPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0),InPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0))
-LastSize=(X=1914,Y=992)
+LastSize=(X=0,Y=0)
 LastExecutedLaunchDevice=Windows@LOGANS
 LastExecutedLaunchName=LOGANS
 LastExecutedPIEPreviewDevice=
@@ -381,15 +381,15 @@ RecentAssetEditors=EnumEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=MaterialInstanceEditor
 RecentAssetEditors=EnumEditor
-OpenAssetsAtExit=/Game/MemoryGame/Blueprints/GameTemplate/Animal_Deck/Normal_Modes/WBP_1PlayerNormalEasyTemplate.WBP_1PlayerNormalEasyTemplate
+OpenAssetsAtExit=/Game/UI/Main_Menu.Main_Menu
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/MemoryGame/Blueprints/GameTemplate/Animal_Deck/Normal_Modes/WBP_1PlayerNormalHard
-MRUItem1=/Game/MemoryGame/Blueprints/GameTemplate/Animal_Deck/Normal_Modes/WBP_1PlayerNormalMedium
-MRUItem2=/Game/MemoryGame/Blueprints/GameTemplate/Animal_Deck/Normal_Modes/WBP_1PlayerNormalEasyTemplate
-MRUItem3=/Game/MemoryGame/Blueprints/Setup/WBP_ImageCard
-MRUItem4=/Game/MemoryGame/Blueprints/EndGame/WBP_EndgameNormalHard
-MRUItem5=/Game/UI/Main_Menu
+MRUItem0=/Game/UI/Main_Menu
+MRUItem1=/Game/MemoryGame/Blueprints/GameTemplate/Animal_Deck/Normal_Modes/WBP_1PlayerNormalHard
+MRUItem2=/Game/MemoryGame/Blueprints/GameTemplate/Animal_Deck/Normal_Modes/WBP_1PlayerNormalMedium
+MRUItem3=/Game/MemoryGame/Blueprints/GameTemplate/Animal_Deck/Normal_Modes/WBP_1PlayerNormalEasyTemplate
+MRUItem4=/Game/MemoryGame/Blueprints/Setup/WBP_ImageCard
+MRUItem5=/Game/MemoryGame/Blueprints/EndGame/WBP_EndgameNormalHard
 MRUItem6=/Game/MemoryGame/Blueprints/GameTemplate/WBP_MemoryGame
 MRUItem7=/Game/MemoryGame/Blueprints/EndGame/WBP_EndGame
 MRUItem8=/Game/MemoryGame/Blueprints/EndGame/WBP_Endgame1PlayerNormalMedium1
@@ -1971,7 +1971,7 @@ SequencerAssetPicker.ThumbnailSize=2
 SequencerAssetPicker.CurrentViewType=0
 
 [MessageLog]
-LastLogListing=PIE
+LastLogListing=BlueprintLog
 
 [DetailPropertyExpansion]
 CharacterMovementComponent="\"Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character Movement: Avoidance.GroupsToIgnore\" "
@@ -2002,14 +2002,14 @@ InputAction="\"Object\" "
 SkeletalMeshComponent="\"Object\" "
 SkinnedMeshComponent="\"Object\" "
 WorldSettings="\"Object\" \"Object.World.NavigationSystemConfig\" \"Object.Lightmass.LightmassSettings\" "
-Info="\"Object\" "
+Info="\"Object\" \"Object.World.NavigationSystemConfig\" \"Object.Lightmass.LightmassSettings\" "
 Texture2D="\"Object\" "
 Texture="\"Object\" "
 StreamableRenderAsset="\"Object\" "
 CanvasPanel="\"Object\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 PanelWidget="\"Object\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
-Widget="\"Object\" "
-Visual="\"Object\" "
+Widget="\"Object\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+Visual="\"Object\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 Image="\"Object\" \"Object.Appearance.Brush\" \"Object.Appearance.Brush.TintColor\" \"Object.Appearance.Brush.OutlineSettings.Color\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 TextBlock="\"Object\" \"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Appearance.Font.OutlineSettings.OutlineColor\" \"Object.Appearance.StrikeBrush\" \"Object.Appearance.StrikeBrush.TintColor\" \"Object.Appearance.StrikeBrush.OutlineSettings.Color\" \"Object.Appearance.ShadowColorAndOpacity\" \"Object.Appearance.Margin\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 TextLayoutWidget="\"Object\" \"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Appearance.Font.OutlineSettings.OutlineColor\" \"Object.Appearance.StrikeBrush\" \"Object.Appearance.StrikeBrush.TintColor\" \"Object.Appearance.StrikeBrush.OutlineSettings.Color\" \"Object.Appearance.ShadowColorAndOpacity\" \"Object.Appearance.Margin\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
@@ -2017,7 +2017,7 @@ HorizontalBox="\"Object\" \"Object.Layout.Slot\" \"Object.Render Transform.Rende
 Button="\"Object\" \"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 ContentWidget="\"Object\" \"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 Gameplay_Screen_1_Player_C="\"Object\" "
-UserWidget="\"Object\" "
+UserWidget="\"Object\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 VerticalBox="\"Object\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 Settings_Menu_C="\"Object\" "
 CapsuleComponent="\"Object\" "
@@ -3650,8 +3650,8 @@ ExternalImagePicker.LastCompileMethod=Unknown
 
 [Python]
 LastDirectory=
-RecentsFiles=C:/Program Files/Epic Games/UE_5.3/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 RecentsFiles=D:/Programs/Unreal/UE 5.3/UE_5.3/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
+RecentsFiles=C:/Program Files/Epic Games/UE_5.3/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 
 [WidgetTemplatesExpanded]
 Audio=False
