--- a/CardGame/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/CardGame/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -188,7 +188,7 @@ WorldSettings=WorldSettings.WorldPartitionSetup.RuntimeHash,WorldSettings.GameMo
 WorldPartitionRuntimeSpatialHash=
 Gameplay_Screen_1_Player_C=CardPlayer_C.Physics.ConstraintsGroup,CardPlayer_C.Collision.Collision,PropertyWrapper.DefaultValueCategory.Player Number,PropertyWrapper.DefaultValueCategory.2x2,K2Node_VariableGet.DefaultValueCategory.Player Number
 K2Node_VariableGet=CardPlayer_C.Physics.ConstraintsGroup,CardPlayer_C.Collision.Collision,PropertyWrapper.DefaultValueCategory.Player Number,PropertyWrapper.DefaultValueCategory.2x2,K2Node_VariableGet.DefaultValueCategory.Player Number
-Settings_Menu_C=CardPlayer_C.Physics.ConstraintsGroup,CardPlayer_C.Collision.Collision,PropertyWrapper.DefaultValueCategory.Player Number,K2Node_VariableGet.DefaultValueCategory.Player Number
+Settings_Menu_C=
 Main_Menu_C=CardPlayer_C.Physics.ConstraintsGroup,CardPlayer_C.Collision.Collision,PropertyWrapper.DefaultValueCategory.Player Number,PropertyWrapper.DefaultValueCategory.2x2,K2Node_VariableGet.DefaultValueCategory.Player Number
 K2Node_VariableSet=CardPlayer_C.Physics.ConstraintsGroup,CardPlayer_C.Collision.Collision,PropertyWrapper.DefaultValueCategory.Player Number,PropertyWrapper.DefaultValueCategory.2x2,K2Node_VariableGet.DefaultValueCategory.Player Number
 K2Node=CardPlayer_C.Physics.ConstraintsGroup,CardPlayer_C.Collision.Collision,PropertyWrapper.DefaultValueCategory.Player Number,K2Node_VariableGet.DefaultValueCategory.Player Number
@@ -210,7 +210,7 @@ LandscapeStreamingProxy=CardPlayer_C.Physics.ConstraintsGroup,CardPlayer_C.Colli
 Actor=CardPlayer_C.Physics.ConstraintsGroup,CardPlayer_C.Collision.Collision,PropertyWrapper.DefaultValueCategory.Player Number,K2Node_VariableGet.DefaultValueCategory.Player Number
 Reset Cards=CardPlayer_C.Physics.ConstraintsGroup,CardPlayer_C.Collision.Collision,PropertyWrapper.DefaultValueCategory.Player Number,K2Node_VariableGet.DefaultValueCategory.Player Number
 Reset Cards_9=CardPlayer_C.Physics.ConstraintsGroup,CardPlayer_C.Collision.Collision,PropertyWrapper.DefaultValueCategory.Player Number,K2Node_VariableGet.DefaultValueCategory.Player Number
-K2Node_CustomEvent=CardPlayer_C.Physics.ConstraintsGroup,CardPlayer_C.Collision.Collision,PropertyWrapper.DefaultValueCategory.Player Number,K2Node_VariableGet.DefaultValueCategory.Player Number
+K2Node_CustomEvent=CardPlayer_C.Physics.ConstraintsGroup,CardPlayer_C.Collision.Collision,PropertyWrapper.DefaultValueCategory.Player Number,PropertyWrapper.DefaultValueCategory.2x2,K2Node_VariableGet.DefaultValueCategory.Player Number
 CardManager_C=CardPlayer_C.Physics.ConstraintsGroup,CardPlayer_C.Collision.Collision,PropertyWrapper.DefaultValueCategory.Player Number,PropertyWrapper.DefaultValueCategory.2x2,K2Node_VariableGet.DefaultValueCategory.Player Number
 K2Node_SwitchInteger=CardPlayer_C.Physics.ConstraintsGroup,CardPlayer_C.Collision.Collision,PropertyWrapper.DefaultValueCategory.Player Number,K2Node_VariableGet.DefaultValueCategory.Player Number
 Turtle_C=
@@ -352,18 +352,20 @@ LastLevel=/Engine/Maps/Templates/OpenWorld
 CleanShutdown=True
 DebuggerAttached=False
 RecentAssetEditors=WidgetBlueprintEditor
-RecentAssetEditors=WidgetBlueprintEditor
-RecentAssetEditors=WidgetBlueprintEditor
-RecentAssetEditors=WidgetBlueprintEditor
-RecentAssetEditors=WidgetBlueprintEditor
-RecentAssetEditors=WidgetBlueprintEditor
-RecentAssetEditors=WidgetBlueprintEditor
-RecentAssetEditors=WidgetBlueprintEditor
-RecentAssetEditors=WidgetBlueprintEditor
-RecentAssetEditors=WidgetBlueprintEditor
-RecentAssetEditors=WidgetBlueprintEditor
-RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=EnumEditor
+RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=EnumEditor
 RecentAssetEditors=
@@ -377,42 +379,44 @@ RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=EnumEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=MaterialInstanceEditor
-RecentAssetEditors=EnumEditor
+OpenAssetsAtExit=/Game/MemoryGame/Blueprints/Setup/WBP_ImageCard.WBP_ImageCard
+OpenAssetsAtExit=/Game/UI/Settings_Menu.Settings_Menu
+OpenAssetsAtExit=/Game/DataBetweenLevels.DataBetweenLevels
+OpenAssetsAtExit=/Game/MemoryGame/Blueprints/GameTemplate/Animal_Deck/Normal_Modes/WBP_1PlayerNormalEasyTemplate.WBP_1PlayerNormalEasyTemplate
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/UI/Main_Menu
-MRUItem1=/Game/MemoryGame/Blueprints/GameTemplate/Animal_Deck/Normal_Modes/WBP_1PlayerNormalHard
-MRUItem2=/Game/MemoryGame/Blueprints/GameTemplate/Animal_Deck/Normal_Modes/WBP_1PlayerNormalMedium
-MRUItem3=/Game/MemoryGame/Blueprints/GameTemplate/Animal_Deck/Normal_Modes/WBP_1PlayerNormalEasyTemplate
-MRUItem4=/Game/MemoryGame/Blueprints/Setup/WBP_ImageCard
-MRUItem5=/Game/MemoryGame/Blueprints/EndGame/WBP_EndgameNormalHard
-MRUItem6=/Game/MemoryGame/Blueprints/GameTemplate/WBP_MemoryGame
-MRUItem7=/Game/MemoryGame/Blueprints/EndGame/WBP_EndGame
-MRUItem8=/Game/MemoryGame/Blueprints/EndGame/WBP_Endgame1PlayerNormalMedium1
-MRUItem9=/Game/MemoryGame/Blueprints/EndGame/WBP_Endgame1PlayerNormalEasy
-MRUItem10=/Game/MemoryGame/Blueprints/GameTemplate/Animal_Deck/TemplateAnimalDeck
-MRUItem11=/Game/MemoryGame/Blueprints/GameTemplate/Animal_Deck/WBP_EasyTimedTest
-MRUItem12=/Game/DataBetweenLevels
-MRUItem13=/Game/CardGM
-MRUItem14=/Game/UI/Game_Mode_Data/Card_Pack
-MRUItem15=/Game/MemoryGame/Maps/M_MemoryGame
-MRUItem16=/Game/UI/Gameplay_Screen_1_Player
-MRUItem17=/Game/Cards/Card
-MRUItem18=/Game/CardManager
-MRUItem19=/Game/CardPlayer
-MRUItem20=/Game/Interact
-MRUItem21=/Game/PlayerControllerCard
-MRUItem22=/Game/Cards/Bat
-MRUItem23=/Game/Cards/Bee
-MRUItem24=/Game/Cards/Llama
-MRUItem25=/Game/Cards/Turtle
-MRUItem26=/Game/ArraySizes
-MRUItem27=/Game/ClickableComponent
-MRUItem28=/Game/Meshes/Turtle
-MRUItem29=/Game/CardType
+MRUItem0=/Game/MemoryGame/Blueprints/GameTemplate/Animal_Deck/Normal_Modes/WBP_1PlayerNormalEasyTemplate
+MRUItem1=/Game/DataBetweenLevels
+MRUItem2=/Game/UI/Settings_Menu
+MRUItem3=/Game/MemoryGame/Blueprints/Setup/WBP_ImageCard
+MRUItem4=/Game/ArraySizes
+MRUItem5=/Game/UI/Main_Menu
+MRUItem6=/Game/MemoryGame/Blueprints/GameTemplate/Animal_Deck/Normal_Modes/WBP_1PlayerNormalHard
+MRUItem7=/Game/MemoryGame/Blueprints/GameTemplate/Animal_Deck/Normal_Modes/WBP_1PlayerNormalMedium
+MRUItem8=/Game/MemoryGame/Blueprints/EndGame/WBP_EndgameNormalHard
+MRUItem9=/Game/MemoryGame/Blueprints/GameTemplate/WBP_MemoryGame
+MRUItem10=/Game/MemoryGame/Blueprints/EndGame/WBP_EndGame
+MRUItem11=/Game/MemoryGame/Blueprints/EndGame/WBP_Endgame1PlayerNormalMedium1
+MRUItem12=/Game/MemoryGame/Blueprints/EndGame/WBP_Endgame1PlayerNormalEasy
+MRUItem13=/Game/MemoryGame/Blueprints/GameTemplate/Animal_Deck/TemplateAnimalDeck
+MRUItem14=/Game/MemoryGame/Blueprints/GameTemplate/Animal_Deck/WBP_EasyTimedTest
+MRUItem15=/Game/CardGM
+MRUItem16=/Game/UI/Game_Mode_Data/Card_Pack
+MRUItem17=/Game/MemoryGame/Maps/M_MemoryGame
+MRUItem18=/Game/UI/Gameplay_Screen_1_Player
+MRUItem19=/Game/Cards/Card
+MRUItem20=/Game/CardManager
+MRUItem21=/Game/CardPlayer
+MRUItem22=/Game/Interact
+MRUItem23=/Game/PlayerControllerCard
+MRUItem24=/Game/Cards/Bat
+MRUItem25=/Game/Cards/Bee
+MRUItem26=/Game/Cards/Llama
+MRUItem27=/Game/Cards/Turtle
+MRUItem28=/Game/ClickableComponent
+MRUItem29=/Game/Meshes/Turtle
 
 [DetailCategories]
 CardPlayer_C.TransformCommon=True
@@ -1919,6 +1923,18 @@ RichTextBlock.Performance=True
 RichTextBlock.Rendering=True
 RichTextBlock.Navigation=True
 RichTextBlock.Localization=True
+DirectionalLightComponent.Light=True
+DirectionalLightComponent.AtmosphereAndCloud=True
+SkyLightComponent.Light=True
+SkyLightComponent.DistanceFieldAmbientOcclusion=True
+SkyLightComponent.AtmosphereAndCloud=True
+SkyAtmosphereComponent.Planet=True
+SkyAtmosphereComponent.Atmosphere=True
+SkyAtmosphereComponent.Atmosphere - Rayleigh=True
+SkyAtmosphereComponent.Atmosphere - Mie=True
+SkyAtmosphereComponent.Atmosphere - Absorption=True
+SkyAtmosphereComponent.Art Direction=True
+DataBetweenLevels_C.Default=True
 
 [ContentBrowser]
 ContentBrowserTab1.SourcesExpanded=True
@@ -1933,7 +1949,7 @@ ContentBrowserTab1.VerticalSplitter.SlotSize1=0.75
 ContentBrowserTab1.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserTab1.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserTab1.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserTab1.SelectedPaths=/Game/Sound
+ContentBrowserTab1.SelectedPaths=/Game/MemoryGame/Images/Animals-deck
 ContentBrowserTab1.PluginFilters=
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
@@ -1953,7 +1969,7 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.SelectedPaths=/Game/Sound/Irish_sounds
+ContentBrowserDrawer.SelectedPaths=/Game/MemoryGame/Images/Animals-deck
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 ContentBrowserDrawer.SelectedCollections=
@@ -2007,8 +2023,8 @@ Texture="\"Object\" "
 StreamableRenderAsset="\"Object\" "
 CanvasPanel="\"Object\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 PanelWidget="\"Object\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
-Widget="\"Object\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
-Visual="\"Object\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+Widget="\"Object\" "
+Visual="\"Object\" "
 Image="\"Object\" \"Object.Appearance.Brush\" \"Object.Appearance.Brush.TintColor\" \"Object.Appearance.Brush.OutlineSettings.Color\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 TextBlock="\"Object\" \"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Appearance.Font.OutlineSettings.OutlineColor\" \"Object.Appearance.StrikeBrush\" \"Object.Appearance.StrikeBrush.TintColor\" \"Object.Appearance.StrikeBrush.OutlineSettings.Color\" \"Object.Appearance.ShadowColorAndOpacity\" \"Object.Appearance.Margin\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 TextLayoutWidget="\"Object\" \"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Appearance.Font.OutlineSettings.OutlineColor\" \"Object.Appearance.StrikeBrush\" \"Object.Appearance.StrikeBrush.TintColor\" \"Object.Appearance.StrikeBrush.OutlineSettings.Color\" \"Object.Appearance.ShadowColorAndOpacity\" \"Object.Appearance.Margin\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
@@ -2016,13 +2032,13 @@ HorizontalBox="\"Object\" \"Object.Layout.Slot\" \"Object.Render Transform.Rende
 Button="\"Object\" \"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 ContentWidget="\"Object\" \"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 Gameplay_Screen_1_Player_C="\"Object\" "
-UserWidget="\"Object\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+UserWidget="\"Object\" "
 VerticalBox="\"Object\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 Settings_Menu_C="\"Object\" "
 CapsuleComponent="\"Object\" "
 ShapeComponent="\"Object\" "
 Main_Menu_C="\"Object\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
-EdGraphNode_Comment="\"Object\" "
+EdGraphNode_Comment="\"Object\" \"Object.Comment.CommentColor\" "
 EdGraphNode="\"Object\" \"Object.PinOptions.PinNames\" "
 Settings_Menu_Title_C="\"Object\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 WBP_Easy_C="\"Object\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
@@ -2257,6 +2273,13 @@ TemplateAnimalDeck_C="\"Object\" "
 WBP_Endgame1PlayerNormalMedium1_C="\"Object\" "
 WBP_EndgameNormalHard_C="\"Object\" "
 RichTextBlock="\"Object\" \"Object.Appearance.Margin\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+DirectionalLightComponent="\"Object\" "
+LightComponent="\"Object\" "
+LightComponentBase="\"Object\" "
+SkyLightComponent="\"Object\" "
+SkyAtmosphereComponent="\"Object\" "
+VolumetricCloudComponent="\"Object\" "
+ExponentialHeightFogComponent="\"Object\" "
 
 [PlacementMode]
 RecentlyPlaced=/Game/Card.Card;
@@ -2294,7 +2317,7 @@ PerWorldEditorSettings=(("/Game/Untitled.Untitled", (LoadedEditorRegions=((Min=(
 /Game/UI/Game_Mode_Data/Difficulty.Difficulty=0
 /Game/UI/Game_Mode_Data/Card_Pack.Card_Pack=1
 /Game/MemoryGame/Blueprints/GameTemplate/WBP_Easy.WBP_Easy=0
-/Game/MemoryGame/Blueprints/Setup/WBP_ImageCard.WBP_ImageCard=1
+/Game/MemoryGame/Blueprints/Setup/WBP_ImageCard.WBP_ImageCard=0
 /Game/MemoryGame/Blueprints/Setup/WBP_OptionButton.WBP_OptionButton=1
 /Game/MemoryGame/Blueprints/EndGame/WBP_EndGame.WBP_EndGame=0
 /Game/UI/Clock_WB.Clock_WB=1
@@ -2317,7 +2340,7 @@ PerWorldEditorSettings=(("/Game/Untitled.Untitled", (LoadedEditorRegions=((Min=(
 /Game/Cards/Bat.Bat=0
 /Game/MemoryGame/Blueprints/GameTemplate/WBP_EasyTimedTest.WBP_EasyTimedTest=1
 /Game/MemoryGame/Blueprints/GameTemplate/WBP_EasyTemplate.WBP_EasyTemplate=1
-/Game/DataBetweenLevels.DataBetweenLevels=1
+/Game/DataBetweenLevels.DataBetweenLevels=0
 /Game/MemoryGame/Blueprints/GameTemplate/Animal_Deck/WBP_Memorygameanimaldecktemplate.WBP_Memorygameanimaldecktemplate=0
 /Game/MemoryGame/Blueprints/GameTemplate/Animal_Deck/Normal_Modes/WBP_1PlayerNormalMedium.WBP_1PlayerNormalMedium=1
 /Game/MemoryGame/Blueprints/EndGame/WBP_Endgame1PlayerNormalEasy.WBP_Endgame1PlayerNormalEasy=0
@@ -3654,7 +3677,7 @@ RecentsFiles=D:/Programs/Unreal/UE 5.3/UE_5.3/Engine/Plugins/Animation/ControlRi
 
 [WidgetTemplatesExpanded]
 Audio=False
-Editor=False
+Editor=True
 Input=False
 Lists=False
 Misc=False
@@ -3665,7 +3688,6 @@ Special Effects=False
 Synth=False
 User Created=False
 Advanced=False
-Common=False
 
 [PluginBrowser]
 InstalledPlugins=WMFCodecs
